<resources>
    <string name="app_name">Okoa Gas</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Brands</string>
    <string name="editor_activity_title_new_brand">Add a Brand</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="empty_view_title_text">Cannot find your area vendors?...</string>
    <string name="empty_view_brand_text">Not yet added brands?...</string>
    <string name="empty_view_subtitle_text">Check neighboring town</string>
    <string name="empty_brand_view_subtitle_text">Add brands to your counter</string>
    <string name="category_overview">Name</string>
    <string name="category_name">Price</string>
    <string name="category_town">Town</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_gas_weight">Weight</string>
    <string name="unit_gas_price">Kes</string>
    <string name="big_cylinder">13 Kg</string>
    <string name="medium_cylinder">6 Kg</string>
    <string name="small_cylinder">3 Kg</string>
    <string name="editor_insert_failed" />
    <string name="editor_insert_successful" />
    <string name="hint_gas_size">gas size</string>
    <string name="hint_outlet_type">outlet type</string>
    <string name="category_county_name">county name</string>
    <string name="title_county">County</string>
    <string name="hint_vendor_county">Choose County</string>
    <string name="outlet_name">Outlet Name</string>
    <string name="Shop">Vendor Shop</string>
    <string name="Supermarket">Supermarket</string>
    <string name="GasStation">Gas Station</string>
    <string name="Murangá">Murangá</string>
    <string name="Kiambu">Kiambu</string>
    <string name="nakuru">Nakuru</string>
    <string name="mombasa">Mombasa</string>
    <string name="kakamega">Kakamega</string>
    <string name="elgeyo_marakwet">Elgeyo Marakwet</string>
    <string name="vendor_shop">Retail Shop</string>
    <string name="veditor_overview">Vendor Name</string>
    <string name="vendor_county">Vendor County</string>
    <string name="main_in_stock">main_in_stock</string>
    <string name="dollar_sign">dollar_sign</string>
    <string name="action_settings">settings</string>
    <string name="order">Order</string>
    <string name="supplier">Vendor</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="picture_gas">Brand Image</string>
    <string name="product">Product Detail</string>
    <string name="price">Price</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="detail_activity_title_new_gas">Add New Brand</string>
    <string name="detail_activity_title_edit_gas">Edit Brand</string>
    <string name="detail_activity_title_order">Product Detail</string>
    <string name="detail_activity_title_confirm_order">Your Order Detail</string>
    <string name="category_button">EDIT</string>
    <string name="vendor_town">Vendor Town</string>
    <string name="total_price">To Pay</string>
    <string name="cylinder">Cylinder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="empty_gas_refill">Order Gas Refill</string>
    <string name="empty_new_cylinder">Buy New Cylinder</string>
    <string name="action_vendor_dashboard">Vendor Dashboard</string>
    <string name="action_view_vendors">Available Vendors</string>
    <string name="action_my_profile">My Profile</string>
    <string name="action_view_brands">Brands</string>
    <string name="phone">Mobile Number</string>
    <string name="tagline">Gas chap chap</string>
    <string name="my_town">My Town</string>
    <string name="profile_fragment">Home</string>
    <string name="empty_view_message">To insert a product into the database, please tap the plus button.</string>
    <string name="product_name_tools">Product Name</string>
    <string name="quantity_text">Quantity:</string>
    <string name="quantity_tools_value">8</string>
    <string name="price_text">Price:&#032;</string>
    <string name="price_tools_value">145</string>
    <string name="local_currency">$</string>
    <string name="sale_text">Sale</string>
    <string name="all_products_deleted">All products was successfully deleted!</string>
    <string name="failed_deleting_all_products">Failed to delete all products!</string>
    <string name="delete_all_product_dialog_message">Do you want to delete all products?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="out_of_stock">This product is out of stock!</string>
    <string name="detail_activity_title_new_product">New Product</string>
    <string name="detail_activity_title_edit_product">Edit Product</string>
    <string name="product_name_label">Product Name :</string>
    <string name="enter_product_name_hint">Enter Product Name</string>
    <string name="price_label">Price :</string>
    <string name="enter_product_price_hint">Enter Price</string>
    <string name="available_quantity">Available Quantity</string>
    <string name="restock_options">Restock Options</string>
    <string name="suppliers_name_label">Supplier :</string>
    <string name="suppliers_name_hint">Enter Supplier</string>
    <string name="suppliers_email_label">Supplier\'s E-mail :</string>
    <string name="suppliers_email_hint">Enter e-mail</string>
    <string name="restock_quantity_label">Restock Quantity :</string>
    <string name="restock_quantity_hint">0</string>
    <string name="restock_button_title">Save Item</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="select_photo">Select Photo</string>
    <string name="save_product_failed">Product saving failed!</string>
    <string name="save_product_successful">Product saved!</string>
    <string name="update_product_failed">Product update failed!</string>
    <string name="update_product_successful">Product updated!</string>
    <string name="enter_product_name">Please enter product name!</string>
    <string name="enter_product_price">Please enter the price of the product!</string>
    <string name="enter_positive_product_price">Please enter a positive value for the price!</string>
    <string name="enter_product_quantity">Please enter the quantity of the product!</string>
    <string name="enter_positive_product_quantity">Please enter positive value for the product\'s quantity!</string>
    <string name="enter_product_photo">Please choose a photo for the product!</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="detail_delete_product_successful">Product deleted</string>
    <string name="detail_delete_product_failed">Error with deleting product</string>
    <string name="restocking_new_product">You cannot restock a new product!</string>
    <string name="enter_supplier_name">Please enter supplier name</string>
    <string name="enter_supplier_email">Please enter supplier\'s e-mail</string>
    <string name="invalid_supplier_email">Supplier\'s e-mail is not a valid format! Please edit that field.</string>
    <string name="enter_restock_quantity">Please enter restock quantity</string>
    <string name="enter_positive_restock_quantity">Enter positive value for restock quantity</string>
    <string name="ordering">Ordering</string>
    <string name="hello">Hello</string>
    <string name="i_would_like_to_order">I would like to order</string>
    <string name="restock_quantity_measurement_units">pieces of</string>
    <string name="final_price">To Pay</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_detail">Order  Detail</string>
    <string name="thanks">Karibu Tena</string>
    <string name="checkout">Check Out</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="no_available_orders">You don\'t have orders yet...</string>
    <string name="update_shelve">Have you updated your shelf?</string>
    <string name="brand_name_label">Brand Name</string>
    <string name="product_cat_label">Product Category</string>
    <string name="product_desc_label">Product Desc</string>
    <string name="medium_refill">6KG REFILL</string>
    <string name="medium_new">6KG NEW</string>
    <string name="big_refill">13KG REFILL</string>
    <string name="big_new">13KG NEW</string>
    <string name="small_refill">3KG REFILL</string>
    <string name="small_new">3KG NEW</string>
    <string name="dash_stats_label">Today Statistics</string>
    <string name="dash_fulfilled_orders">Fulfilled Orders</string>
    <string name="dash_area_orders">Orders in your Area</string>
    <string name="dash_vendor_Earnings">Vendor Earnings</string>
    <string name="dash_brand_ordered">Brand Ordered</string>
    <string name="dash_brand_weight">Weight</string>
    <string name="dash_brand_price">Price</string>
    <string name="dash_available_orders">Orders available today</string>
    <string name="dash_available_stock">Available Stock</string>
    <string name="product_brand_label">Brand</string>
    <string name="product_weight_label">Weight</string>
    <string name="cust_order_details">My Order Details</string>
    <string name="map_image">My Location</string>
    <string name="dash_cylinder_stock">Available Cylinders</string>
    <string name="dash_accessories_stock">Available Accessories</string>
    <string name="dash_out_of_stock">Out of stock</string>
    <string name="add_shop_cart">Add Shopping Cart</string>
    <string name="buy">Order</string>
</resources>