<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_insert_dummy_data"
        android:title="@string/action_insert_dummy_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete_all_entries"
        android:title="@string/action_delete_all_entries"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_my_profile"
        android:title="@string/action_my_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_brands"
        android:title="@string/action_view_brands"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_vendor_dashboard"
        android:title="@string/action_vendor_dashboard"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_vendors"
        android:title="@string/action_view_vendors"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>

