<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScrollViewStyling">
    <LinearLayout style="@style/ProductDetailsHolderStyle">
    <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
        <TextView
            style="@style/SectionsTitleStyling"
            android:text="@string/dash_available_orders"/>

    </LinearLayout>
    <!-- Input field -->
    <LinearLayout style="@style/LinearLayoutHoldersStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="0">
        <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
        <TextView
            style="@style/LabelsStyling"
            android:text="@string/dash_brand_ordered" />
            <TextView
                style="@style/LabelsStyling"
                android:text="H-Gas"/>
        </LinearLayout>
        <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
        <TextView
            style="@style/LabelsStyling"
            android:text="@string/dash_brand_weight" />
            <TextView
                style="@style/LabelsStyling"
                android:text="6Kg"/>
        </LinearLayout>
        <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
        <TextView
            style="@style/LabelsStyling"
            android:text="@string/dash_brand_price" />
            <TextView
                style="@style/LabelsStyling"
                android:text="Kes 1300"/>
        </LinearLayout>
        <Button
            android:id="@+id/view_more_orders"
            style="@style/ViewMoreButtonStyling" />
    </LinearLayout>
        <View style="@style/SeparatorStyling" />
        <LinearLayout style="@style/LinearLayoutHoldersStyle">

            <TextView
                    style="@style/SectionsTitleStyling"
                    android:text="@string/dash_stats_label"/>
        </LinearLayout>
            <!-- Input field -->
        <LinearLayout style="@style/LinearLayoutHoldersStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="0">
                <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
                <TextView
                    style="@style/LabelsStyling"
                    android:text="@string/dash_fulfilled_orders" />
                    <TextView
                        style="@style/LabelsStyling"
                        android:id="@+id/fulfilled_orders"
                        android:text="15" />
                </LinearLayout>
                <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
                    <TextView
                        style="@style/LabelsStyling"
                        android:text="@string/dash_area_orders" />
                    <TextView
                        style="@style/LabelsStyling"
                        android:id="@+id/area_orders"
                        android:text="4" />
                </LinearLayout>
                <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
                    <TextView
                        style="@style/LabelsStyling"
                        android:text="@string/dash_vendor_Earnings" />
                    <TextView
                        style="@style/LabelsStyling"
                        android:id="@+id/vendor_earnings"
                        android:text="15" />
                </LinearLayout>

        <Button
            android:id="@+id/view_more_stats"
            style="@style/ViewMoreButtonStyling" />
        </LinearLayout>
        <View style="@style/SeparatorStyling" />

    <LinearLayout style="@style/LinearLayoutHoldersStyle">
        <TextView
            style="@style/SectionsTitleStyling"
            android:text="@string/dash_available_stock"/>
    </LinearLayout>

    <!-- Input field -->
            <LinearLayout style="@style/LinearLayoutHoldersStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="0">
            <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
                <TextView
                    style="@style/LabelsStyling"
                    android:text="@string/dash_cylinder_stock" />
                <TextView
                    style="@style/LabelsStyling"
                    android:id="@+id/available_cylinders"
                    android:text="10" />
            </LinearLayout>
            <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
                <TextView
                    style="@style/LabelsStyling"
                    android:text="@string/dash_accessories_stock" />
                <TextView
                    style="@style/LabelsStyling"
                    android:id="@+id/accessory_stock"
                    android:text="16" />
            </LinearLayout>
            <LinearLayout style="@style/HorizontalLayoutHoldersStyle">
                <TextView
                    style="@style/LabelsStyling"
                    android:text="@string/dash_out_of_stock" />
                <TextView
                    style="@style/LabelsStyling"
                    android:id="@+id/out_of_stock"
                    android:text="15" />
            </LinearLayout>
        <View style="@style/SeparatorStyling" />
        <Button
            android:id="@+id/fulfill_order_button"
            style="@style/AcceptOrderButtonStyling" />
    </LinearLayout>
    </LinearLayout>
</ScrollView>